Fixed spacing in Nav Bar. Adding crosshair cursor.

--- a/NavBar.css
+++ b/NavBar.css
@@ -1,262 +1,9 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-body{
-    overflow-x: hidden;
-    /* position:relative; */
-    margin: 0;
-    background-color: #000000;
-    /* height: 100%; */
-    /* margin-top: 60px; height of nav-bar */
-}
-
-section {
-    width: 100%;
-    height: 100%;
-}
-
-/* ==== holds contents for NAV bar / MENU bar ==== */
-.navVibe {
-    border-bottom: 1px solid rgb(211, 211, 211);
-    display: flex;
-    position: auto;
-    top: auto;
-    width: 100%;
-    background-color: #000000;
-    overflow: auto;
-    height: auto;
-    z-index:1;
-    padding: 0.8vw;
-    text-align: justify;
-    position: fixed;
-    top: 0px;
-}
-
-.left-links {
-    flex: 1 1 200px;
-}
-
-
-.links {
-    display: inline-block;
-    text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
-    color: rgb(211, 211, 211);
-    text-decoration: none;
-    font-size: max(1vw, min(4vw, 20px));
-    font-weight: 100;
-    font-family: 'Roboto Mono', monospace;
-}
-
-    .links:hover {
-        border-bottom: 1px solid #e7e7e7;
-    }
-
-.selected {
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
-/* ==== holds contents for NAV bar / MENU bar ==== */
-
-/* ==== HOLDS THAT HAVE DO TO WITH CONTAINER . CENTER ==== */
-.container {
-    /* display: table; */
-    /* position: relative; */
-    /* text-align: center; */
-    display: flex;
-}
-
-    .content {
-        display: table-row;
-        height: 100%;
-    }
-
-    .content-body {
-        display: table-cell;
-    }
-
-    .container {
-        width: 100%;
-        height: 100%;
-    }
-
-    .header,
-    .footer {
-        padding: 10px 20px;
-        background: #f7f7f7;
-    }
-
-    .content-body {
-        padding: 20px;
-        background: #e7e7e7;
-    }
-
-    .bottom-left {
-        position: absolute;
-        bottom: 0px;
-        left: 0px;
-    }
-
-    .top-left {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-    }
-
-    .top-right {
-        position: absolute;
-        top: 8px;
-        right: 16px;
-    }
-
-    .bottom-right {
-        position: absolute;
-        bottom: 8px;
-        right: 16px;
-    }
-
-    .centered {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-/* ==== HOLDS THAT HAVE DO TO WITH CONTAINER . CENTER ==== */
-
-h1 {
-    color: #c4c4c4;
-    font-family: 'Stalinist One', sans-serif;
-    font-weight: 400;
-    letter-spacing: 0px;
-    cursor: crosshair;
-    /* border-style: solid; */
-    line-height: 80%;
-}
-
-/* ==== holds contents for NAV bar / MENU bar ==== */
-.topbar {
-    display: flex;
-    position: auto;
-    top: auto;
-    width: 100%;
-    background-color: #1f1f1f;
-    overflow: auto;
-    height: auto;
-    z-index:1;
-    padding: 22px;
-}
-
-.bardesign {
-    background-size:cover;
-    border-bottom: #1f1f1f;
-    border-style: solid;
-    border-width: 1px;
-}
-
-.infobox{
-    width: 75%;
-    /* border-color: #1f1f1f;
-    border-style: solid;
-    border-width: 0.5vw;
-    margin-left: 0.5vw;
-    margin-right: 0.5vw; */
-}
-
-.infobox2{
-    border-color: #1f1f1f;
-    border-style: solid;
-    border-width: 0.5vw;
-    border-right: none;
-    border-left: none;
-    border-bottom: none;
-}
-
-.mainHeading{
-    font-size: 4.5vw;
-    font-weight: 900;
-    font-family: 'Geo', cursive;
-    text-shadow: 0px 1px, 1px, 1px, 1px 1px;
-    text-shadow: #1f1f1f;
-    transform: scaleY(0.8);
-    color: #1f1f1f;
-}
-
-.secret {
-    font-weight: bold;
-    background-color: #000000;
-    color: #e0e0e0;
-
-}
-
-.secretRev {
-    font-weight: bold;
-    background-color: #000000;
-    color: #000000;
-    width:inherit;
-}
-
-.mainBody {
-    font-size: 1.5vw;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background-color: #000000;
-    color: #a7a7a7;
-    text-align: justify;
-    font-weight: bold;
-}
-
-/* Thick red border */
-hr.new4 {
-    /* border: #1f1f1f; */
-  }
-
-  .marquee {
-    width: 100%;
-    margin: 0 auto;
-    white-space: nowrap;
-    overflow: hidden;
-    height: 54px;
-    /* background: #000000; */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    align-items: center;
-    /* position: fixed; */
-    /* bottom: 0px; */
-    border-top: 1px solid rgb(211, 211, 211);
-  }
-  
-  .marquee .text {
-    display: inline-block;
-    padding-left: 4.4rem;
-    text-indent: 0;
-    animation: marquee 22s linear infinite;
-    font-weight: 500;
-    font-size: 1.5rem;
-    line-height: 125%;
-    letter-spacing: -0.04em;
-    text-transform: uppercase;
-    color: #dbdbdb;
-  }
-  @keyframes marquee {
-    0% {
-      transform: translate(0, 0);
-    }
-  
-    100% {
-      transform: translate(-100%, 0);
-    }
-  }
-
-
 
 /* ================================================================================================ */
 
   /* --- Default Overrides - Personal Preference --- */
 
-form > * {
+  form > * {
 	outline: none;
 }
 
